# minecrust

./: .gitignore  Cargo.toml  README.md
src/: block_types.rs  chunk.rs  main.rs  mesh.rs  voxel_data.rs  voxel_map.rs  world.rs
